cmake_minimum_required(VERSION 3.30)

add_subdirectory(CGLA-covariance)
add_subdirectory(CGLA-mat)
add_subdirectory(CGLA-simple)
add_subdirectory(CGLA-vec)
add_subdirectory(Geometry-kdtree)
# The following two rely on key input in order to exit
#add_subdirectory(CGLA-ogl)
#add_subdirectory(GLGraphics-console)
